--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,25 @@
-name: SonarCloud
+name: Build
 
 on:
+  pull_request:
+    branches:
+      - '*'
   push:
     branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+      - 'master'
 
 jobs:
-  sonarcloud:
-    runs-on: ubuntu-16.04
+  build:
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK
+      - name: set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: Analyze with SonarCloud
-#       set environment variables:
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#       run sonar maven plugin:
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=antkorwin_github-actions -Dsonar.organization=antkorwin-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN -Dsonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
+      - name: Maven Verify
+        run: mvn -B clean verify
+      - name: Test Coverage
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
