--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.Gladkovia</groupId>
-	<artifactId>CI-CD-Java</artifactId>
+	<groupId>com.gladkovia</groupId>
+	<artifactId>ci-cd-java</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>Deno</name>
 	<description>Demo project for Github Actions</description>
