--- a/java-deploy-helm/templates/deployment.yaml
+++ b/java-deploy-helm/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: java
 spec:
-  replicas: {{ .Velues.replicaCount }}
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: java-cicd
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: kuber-java-prod
-        image: {{ .Velues.container.image }}
+        image: {{ .Values.container.image }}
         ports:
         - containerPort: 8080
         readinessProbe:
