--- a/java-deploy-helm/values.yaml
+++ b/java-deploy-helm/values.yaml
@@ -2,6 +2,6 @@
 
 
 container:
-  image: ghcr.io/gladkovia/ci-cd-java/ci-cd-java:latest
+  image: ghcr.io/gladkovia/ci-cd-java/ci-cd-java:af5ba3bc
 
 replicaCount: 3
